# CompilerConstruction

./: Environment.hs  KOTLIN.cf  Makefile  README.md  Typechecker.hs  compiler.cabal  main.hs  test.sh  tests.txt
tests/ok/: ForStm.kt  argumentList.kt  class.kt  constructor.kt  expressions.kt  forString.kt  ifStatement.kt  lambdaExpression.kt  lambda_assign.kt  mainfunc.kt  manyFunc.kt  mutability.kt  nullableVar.kt  returnStatement.kt  varDec.kt  whenStatement.kt  whileStatement.kt
tests/parser/: Error_funcDeclaration.kt  errCmt.kt  error_argumentDeclaration.kt  error_comment.kt  error_forRange.kt  error_forStm.kt  error_funcDeclaration2.kt  error_lambdaExpression.kt  error_nullable.kt  error_returnStatement.kt  error_varDec.kt
tests/typechecker/: OperatorErr.kt  VarDecl.kt  block.kt  classSameFun.kt  classSameVar.kt  lambda_ass_wrong_type.kt  lambda_init_wrong_type.kt  mutability.kt  numberofArgs.kt  sameclass.kt  samefunc.kt  typeReturn.kt  var_name_func.kt  when_mult_else.kt  when_wrong_type.kt  wrongOperator.kt
