name:                compiler
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable compiler
  default-language:    Haskell2010
  main-is:             main.hs
  other-modules:
    Typechecker
    AbsKOTLIN
    ErrM
    LexKOTLIN
    ParKOTLIN
    PrintKOTLIN
    Environment

  build-depends:
      base                 >= 4.7 && <5
    , array
  hs-source-dirs:      .
